Serial4j Build: Added javadocs generator script